Use Parcel to build kitchen sink example

--- a/examples/kitchen-sink/package.json
+++ b/examples/kitchen-sink/package.json
@@ -2,10 +2,10 @@
   "name": "example-kitchen-sink",
   "private": true,
   "version": "0.10.5",
-  "main": "dist/index.html",
+  "main": "src/index.html",
   "scripts": {
-    "start": "webpack-dev-server --config ./webpack.config.js --mode development",
-    "build": "webpack --config ./webpack.config.js --mode production",
+    "start": "parcel src/index.html --open",
+    "build": "parcel build src/index.html",
     "test": "jest",
     "test:ci": "jest --ci --runInBand --reporters='default' --reporters='jest-junit'",
     "lint": "tslint -c ../../tslint.json -p tsconfig.json src/**/*.{ts,tsx}",
@@ -16,20 +16,17 @@
     "@types/react": "16.4.16",
     "@types/react-dom": "16.0.9",
     "@types/react-redux": "6.0.9",
-    "@types/webpack-env": "1.13.6",
     "bluebird": "3.5.2",
     "jest": "23.6.0",
     "jest-cli": "23.6.0",
     "jest-junit": "5.2.0",
     "lolex": "3.0.0",
+    "parcel-bundler": "1.10.2",
     "prettier": "1.14.3",
     "react-hot-loader": "4.3.11",
     "string-hash": "1.1.3",
     "ts-jest": "23.10.4",
     "ts-loader": "5.2.1",
-    "webpack": "4.20.2",
-    "webpack-cli": "3.1.2",
-    "webpack-dev-server": "3.1.9",
     "xstate-to-svg": "^0.10.5"
   },
   "dependencies": {
