--- a/examples/minimal/package.json
+++ b/examples/minimal/package.json
@@ -15,7 +15,7 @@
     "xstate": "3.3.3"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.6.1"
+    "parcel-bundler": "1.10.2"
   },
   "keywords": []
 }
