--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "lint": "lerna run lint",
     "build": "lerna run build",
     "publish": "lerna publish --conventional-commits --yes",
-    "junit-merge": "junit-merge ./examples/kitchen-sink/junit.xml ./redux-saga-state-machine/junit.xml ./xstate-to-svg/junit.xml --out ./junit.xml"
+    "junit-merge": "junit-merge ./examples/kitchen-sink/junit.xml ./redux-saga-state-machine/junit.xml ./xstate-to-svg/junit.xml --out ./junit.xml",
+    "compile:watch": "tsc -b --watch examples/kitchen-sink redux-saga-state-machine xstate-to-svg"
   },
   "devDependencies": {
     "lerna": "3.4.3",
