moved some packages to root package.json
added tslint-react

--- a/package.json
+++ b/package.json
@@ -23,7 +23,12 @@
     "compile:watch": "yarn compile --watch"
   },
   "devDependencies": {
+    "junit-merge": "2.0.0",
     "lerna": "3.4.3",
-    "junit-merge": "2.0.0"
+    "tslint": "5.11.0",
+    "tslint-config-prettier": "1.15.0",
+    "tslint-plugin-prettier": "2.0.0",
+    "tslint-react": "^3.6.0",
+    "typescript": "3.1.2"
   }
 }
