--- a/xstate-to-svg/tsconfig.json
+++ b/xstate-to-svg/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "dist",
+    "rootDir": "src",
     "baseUrl": ".", // allow absolute imports to compile eg import Button from 'src/comps/Button'
     "paths": {
       "src/*": ["src/*"] // makes VSCode Auto-Import use absolute imports (from 'src/blah') rather than relative (from '../../blah')
