Using typescript references (#176)
* root tsconfig, using ts references, one root tslint

* added -p tsconfig.json too so any lint rules that need typing work eg circular dependency if we ever add the plugin

* moved some packages to root package.json

* added tslint-react

* added "rootDir": "src" so index.js in dist/

--- a/examples/kitchen-sink/tsconfig.json
+++ b/examples/kitchen-sink/tsconfig.json
@@ -1,30 +1,18 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "target": "es5",
-    "lib": ["es6", "dom"],
-    "jsx": "react",
-    "strictNullChecks": true,
-    "outDir": "./dist",
-    "moduleResolution": "node",
-    "sourceMap": true,
-    // "declaration": true,  // Disable this to work around Typescript bug: https://github.com/Microsoft/TypeScript/issues/25047
-    "allowSyntheticDefaultImports": true, // allows import React from 'react' rather than import * as React from 'react'
-    "downlevelIteration": true,
-    "noImplicitReturns": true,
-    "noImplicitAny": true,
-    "noImplicitThis": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "experimentalDecorators": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "alwaysStrict": true,
+    "outDir": "dist",
+    "rootDir": "src",
     "baseUrl": ".", // allow absolute imports to compile eg import Button from 'src/comps/Button'
     "paths": {
-      "src/*": ["src/*"] // makes VSCode Auto-Import use absolute imports (from 'src/blah') rather than relative (from '../../blah')
-    },
+      "src/*": ["src/*"], // makes VSCode Auto-Import use absolute imports (from 'src/blah') rather than relative (from '../../blah')
+      "redux-saga-state-machine/*": ["../../redux-saga-state-machine/src/*"],
+      "xstate-to-svg/*": ["../../xstate-to-svg/src/*"]
+    }
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules/**/*", "src/**/*.test.ts"],
-  "compileOnSave": true
+  "references": [
+    { "path": "../../redux-saga-state-machine" },
+    { "path": "../../xstate-to-svg" }
+  ]
 }
