--- a/redux-saga-state-machine/package.json
+++ b/redux-saga-state-machine/package.json
@@ -12,8 +12,8 @@
     "start": "tsc --watch",
     "test": "jest",
     "test:ci": "jest --ci --runInBand --reporters='default' --reporters='jest-junit'",
-    "lint": "tslint -c tslint.json 'src/**/*.ts'",
-    "lint:fix": "tslint --fix -c tslint.json 'src/**/*.ts'"
+    "lint": "tslint -c ../tslint.json -p tsconfig.json src/**/*.{ts,tsx}",
+    "lint:fix": "yarn lint --fix"
   },
   "files": [
     "dist"
@@ -28,11 +28,7 @@
     "prettier": "1.14.3",
     "redux": "4.0.0",
     "redux-saga": "0.16.2",
-    "ts-jest": "23.10.4",
-    "tslint": "5.11.0",
-    "tslint-config-prettier": "1.15.0",
-    "tslint-plugin-prettier": "2.0.0",
-    "typescript": "3.1.2",
+    "ts-jest": "23.10.4",    
     "xstate": "3.3.3"
   },
   "peerDependencies": {
