--- a/xstate-to-svg/package.json
+++ b/xstate-to-svg/package.json
@@ -12,8 +12,8 @@
     "start": "tsc --watch",
     "test": "jest",
     "test:ci": "jest --ci --runInBand --reporters='default' --reporters='jest-junit'",
-    "lint": "tslint -c tslint.json 'src/**/*.ts'",
-    "lint:fix": "tslint --fix -c tslint.json 'src/**/*.ts'"
+    "lint": "tslint -c ../tslint.json -p tsconfig.json src/**/*.{ts,tsx}",
+    "lint:fix": "yarn lint --fix"
   },
   "files": [
     "dist"
@@ -27,10 +27,6 @@
     "prettier": "1.14.3",
     "rimraf": "2.6.2",
     "ts-jest": "23.10.4",
-    "tslint": "5.11.0",
-    "tslint-config-prettier": "1.15.0",
-    "tslint-plugin-prettier": "2.0.0",
-    "typescript": "3.1.2",
     "xstate": "3.3.3"
   },
   "dependencies": {
