--- a/examples/kitchen-sink/tsconfig.json
+++ b/examples/kitchen-sink/tsconfig.json
@@ -1,18 +1,28 @@
 {
-  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "dist",
-    "rootDir": "src",
+    "target": "es5",
+    "lib": ["es6", "dom"],
+    "jsx": "react",
+    "strictNullChecks": true,
+    "outDir": "./dist",
+    "moduleResolution": "node",
+    "sourceMap": true,
+    "downlevelIteration": true,
+    "noImplicitReturns": true,
+    "noImplicitAny": true,
+    "noImplicitThis": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "experimentalDecorators": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "alwaysStrict": true,
     "baseUrl": ".",
     "paths": {
-      "src/*": ["src/*"],
-      "redux-saga-state-machine/*": ["../../redux-saga-state-machine/src/*"],
-      "xstate-to-svg/*": ["../../xstate-to-svg/src/*"]
+      "src/*": ["src/*"]
     }
   },
   "include": ["src/**/*"],
-  "references": [
-    { "path": "../../redux-saga-state-machine" },
-    { "path": "../../xstate-to-svg" }
-  ]
+  "exclude": ["node_modules/**/*", "src/**/*.test.ts"],
+  "compileOnSave": true
 }
