--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,7 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
 
+      - run: yarn run typecheck
       - run: yarn run lint
       - run: yarn run build
       - run: yarn run test:ci
