Switch to using `build:ci` script for CI.

--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "start": "lerna run start --parallel",
     "test": "lerna run test",
     "test:ci": "lerna run test:ci",
-    "lint": "lerna run lint",
-    "typecheck": "lerna run typecheck",
-    "build": "lerna run build",
+    "build:ci": "lerna run build:ci",
     "publish": "lerna publish --conventional-commits --yes",
     "junit-merge": "junit-merge ./examples/kitchen-sink/junit.xml ./redux-saga-state-machine/junit.xml ./xstate-to-svg/junit.xml --out ./junit.xml",
     "compile": "tsc -b examples/kitchen-sink redux-saga-state-machine xstate-to-svg",
