--- a/website/package.json
+++ b/website/package.json
@@ -7,6 +7,7 @@
     "start": "docusaurus-start",
     "prebuild": "cp -R ../examples/kitchen-sink/dist/ ./static/example/",
     "build": "docusaurus-build",
+    "build:ci": "yarn build",
     "publish-gh-pages": "docusaurus-publish",
     "write-translations": "docusaurus-write-translations",
     "--version": "docusaurus-version",
