--- a/examples/minimal/package.json
+++ b/examples/minimal/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "parcel index.html --open --port 3001",
     "build": "parcel build index.html --public-url .",
-    "build:ci": "yarn build"
+    "build:ci": "npm run build"
   },
   "dependencies": {
     "redux": "4.0.1",
