--- a/xstate-to-svg/package.json
+++ b/xstate-to-svg/package.json
@@ -9,7 +9,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "build:ci": "yarn lint && yarn build",
+    "build:ci": "npm run lint && npm run build",
     "start": "tsc --watch",
     "test": "jest",
     "test:ci": "jest --ci --runInBand --reporters='default' --reporters='jest-junit'",
