no-deploy: Add script to typecheck kitchen-sink (#182)
* Add script to typecheck kitchen-sink

* Test typechecking

* Wait until builds before typechecking

* Switch to using `build:ci` script for CI.

* Fix type error

* Use CI build for Netlify

* We have to use npm to work around a Netlify bug :(

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,8 +34,7 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
 
-      - run: yarn run lint
-      - run: yarn run build
+      - run: yarn run build:ci
       - run: yarn run test:ci
 
       - run: yarn run junit-merge
