--- a/examples/kitchen-sink/package.json
+++ b/examples/kitchen-sink/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "start": "parcel src/index.html --open --port 3002",
     "build": "parcel build src/index.html --public-url .",
+    "build:ci": "npm run  lint && npm run typecheck && npm run build",
     "test": "jest",
     "test:ci": "jest --ci --runInBand --reporters='default' --reporters='jest-junit'",
     "lint": "tslint -c ../../tslint.json -p tsconfig.json src/**/*.{ts,tsx}",
-    "lint:fix": "yarn lint --fix"
+    "lint:fix": "yarn lint --fix",
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "@types/lolex": "2.1.3",
