--- a/examples/minimal/package.json
+++ b/examples/minimal/package.json
@@ -6,7 +6,8 @@
   "main": "index.html",
   "scripts": {
     "start": "parcel index.html --open --port 3001",
-    "build": "parcel build index.html --public-url ."
+    "build": "parcel build index.html --public-url .",
+    "build:ci": "npm run build"
   },
   "dependencies": {
     "redux": "4.0.1",
