--- a/redux-saga-state-machine/package.json
+++ b/redux-saga-state-machine/package.json
@@ -8,7 +8,8 @@
   "author": "Karl O'Keeffe <github@monket.net>",
   "license": "MIT",
   "scripts": {
-    "build": "npm run lint && tsc",
+    "build": "tsc",
+    "build:ci": "npm run lint && npm run build",
     "start": "tsc --watch",
     "test": "jest",
     "test:ci": "jest --ci --runInBand --reporters='default' --reporters='jest-junit'",
