--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   },
   "scripts": {
     "start": "lerna run start --parallel",
-    "test": "lerna run test",
-    "test:ci": "lerna run test:ci",
+    "test": "jest",
+    "test:ci": "jest --ci --runInBand --reporters='default' --reporters='jest-junit'",
     "build:ci": "lerna run build:ci",
     "publish": "lerna publish --conventional-commits --yes",
     "junit-merge": "junit-merge ./examples/kitchen-sink/junit.xml ./redux-saga-state-machine/junit.xml ./xstate-to-svg/junit.xml --out ./junit.xml",
