--- a/package.json
+++ b/package.json
@@ -14,20 +14,25 @@
   "scripts": {
     "start": "lerna run start --parallel",
     "test": "jest",
-    "test:ci": "jest --ci --runInBand --reporters='default' --reporters='jest-junit'",
+    "test:ci": "jest --ci --runInBand --reporters=default --reporters=jest-junit",
     "build:ci": "lerna run build:ci",
     "publish": "lerna publish --conventional-commits --yes",
-    "junit-merge": "junit-merge ./examples/kitchen-sink/junit.xml ./redux-saga-state-machine/junit.xml ./xstate-to-svg/junit.xml --out ./junit.xml",
     "compile": "tsc -b examples/kitchen-sink redux-saga-state-machine xstate-to-svg",
     "compile:watch": "yarn compile --watch"
   },
   "devDependencies": {
-    "junit-merge": "2.0.0",
     "lerna": "3.4.3",
+    "jest": "23.6.0",
+    "jest-cli": "23.6.0",
+    "jest-junit": "5.2.0",
+    "ts-jest": "23.10.4",
     "tslint": "5.11.0",
     "tslint-config-prettier": "1.15.0",
     "tslint-plugin-prettier": "2.0.0",
     "tslint-react": "^3.6.0",
     "typescript": "3.1.3"
+  },
+  "jest-junit": {
+    "output": "./junit.xml"
   }
 }
