--- a/examples/kitchen-sink/package.json
+++ b/examples/kitchen-sink/package.json
@@ -4,7 +4,7 @@
   "version": "0.10.6",
   "main": "src/index.html",
   "scripts": {
-    "start": "parcel src/index.html --open --port 3002",
+    "start": "parcel src/index.html --port 3002",
     "build": "parcel build src/index.html --public-url .",
     "build:ci": "npm run  lint && npm run typecheck && npm run build",
     "test": "jest",
@@ -14,10 +14,13 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.2",
     "@types/lolex": "2.1.3",
     "@types/react": "16.4.18",
     "@types/react-dom": "16.0.9",
     "@types/react-redux": "6.0.9",
+    "@types/styled-components": "4.0.1",
+    "babel-plugin-styled-components": "1.8.0",
     "bluebird": "3.5.2",
     "jest": "23.6.0",
     "jest-cli": "23.6.0",
@@ -26,6 +29,7 @@
     "parcel-bundler": "1.10.3",
     "prettier": "1.14.3",
     "react-hot-loader": "4.3.11",
+    "styled-components": "4.0.0",
     "ts-jest": "23.10.4",
     "xstate-to-svg": "^0.10.6"
   },
