Allow typing of tests

--- a/examples/kitchen-sink/tsconfig.json
+++ b/examples/kitchen-sink/tsconfig.json
@@ -20,6 +20,6 @@
     }
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules/**/*", "src/**/*.test.ts"],
+  "exclude": ["node_modules"],
   "compileOnSave": true
 }
