--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
           command: |
             if [[ $(git status --short) ]]; then
               echo "It looks like some visualisations are not up to date!"
-              git status --short
+              git status
               exit 1
             fi
 
