Try again with showing diff

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,8 @@ jobs:
           command: |
             if [[ $(git status --short) ]]; then
               echo "It looks like some visualisations are not up to date!"
-              git status
+              git status --short
+              git diff
               exit 1
             fi
 
